2012-12-17  Hendrik Hoeth <hendrik.hoeth@cern.ch>

	* Added CMS_2012_I1193338 analysis

	* Fixed xi cut in ATLAS_2011_I894867

2012-12-17  Andy Buckley  <andy.buckley@cern.ch>

	* Adding analysis descriptions to the HTML analysis page ToC.

2012-12-14  Hendrik Hoeth <hendrik.hoeth@cern.ch>

	* Added CMS_2012_PAS_FWD_11_003 analysis

	* Added LHCB_2012_I1119400 analysis

2012-12-12  Andy Buckley  <andy.buckley@cern.ch>

	* Correction to jet acceptance in CMS_2011_S9120041, from Sercan Sen: thanks!

2012-12-12  Hendrik Hoeth <hendrik.hoeth@cern.ch>

	* Added CMS_2012_PAS_QCD_11_010 analysis

2012-12-07  Andy Buckley  <andy.buckley@cern.ch>

	* Version number bump to 1.8.2 -- release approaching.

	* Rewrite of ALICE_2012_I1181770 analysis to make it a bit more sane and acceptable.

	* Adding a note on FourVector and FourMomentum that operator- and
	operator-= invert both the space and time components: use of -=
	can result in a vector with negative energy.

	* Adding particlesByRapidity and particlesByAbsRapidity to FinalState.

2012-12-07  Hendrik Hoeth <hendrik.hoeth@cern.ch>

	* Added ALICE_2012_I1181770 analysis

	* Bump version to 1.8.2

2012-12-06  Hendrik Hoeth <hendrik.hoeth@cern.ch>

	* Added ATLAS_2012_I1188891 analysis

	* Added ATLAS_2012_I1118269 analysis

	* Added CMS_2012_I1184941 analysis

	* Added LHCB_2010_I867355 analysis

	* Added TGraphErrors support to root2flat

2012-11-27  Hendrik Hoeth <hendrik.hoeth@cern.ch>

	* Fix make-plots png creation for SL5

2012-11-23  Peter Richardson <peter.richardson@durham.ac.uk>

	* Added ATLAS_2012_CONF_2012_153 4-lepton SUSY search

2012-11-17  Andy Buckley  <andy.buckley@cern.ch>

	* Adding MC_PHOTONS by Steve Lloyd and AB, for testing general
	unisolated photon properties, especially those associated with
	charged leptons (e and mu).

2012-11-16  Andy Buckley  <andy.buckley@cern.ch>

	* Adding MC_PRINTEVENT, a convenient (but verbose!) analysis for
	printing out event details to stdout.
