@@ -1,0 +1,7 @@
+# BEGIN PLOT /CMS_2011_I954992/d01-x01-y01 
+Title=Exclusive $\gamma\gamma$ production of muon pairs
+XLabel=$\sqrt{s}$ [GeV]
+YLabel=$\sigma(pp \to p\mu^{+}\mu^{-}p)$ [pb]
+LegendXPos=0.67
+LegendYPos=0.60
+# END PLOT
