@@ -1,0 +1,11 @@
+<?xml version="1.0" encoding="utf-8" ?>
+<!DOCTYPE aida SYSTEM "http://aida.freehep.org/schemas/3.3/aida.dtd">
+<aida version="3.3">
+  <implementation version="1.0" package="HepData"/>
+  <dataPointSet name="d01-x01-y01" dimension="2" path="/REF/CMS_2011_I954992" title="" >
+    <dataPoint>
+      <measurement value="7000.0" errorPlus="0.5" errorMinus="0.5"/>
+      <measurement value="3.38" errorPlus="0.61773780845922" errorMinus="0.61773780845922"/>
+    </dataPoint>
+  </dataPointSet>
+</aida>
