@@ -1,3 +1,7 @@
+2012-12-18  Hendrik Hoeth <hendrik.hoeth@cern.ch>
+
+	* Added CMS_2011_I954992 analysis
+
 2012-12-17  Hendrik Hoeth <hendrik.hoeth@cern.ch>
 
 	* Added CMS_2012_I1193338 analysis
